--- a/Author_/Author_ViewController.xib
+++ b/Author_/Author_ViewController.xib
@@ -36,13 +36,13 @@
                                 <action selector="didPressBack" destination="-1" eventType="touchUpInside" id="1uk-ih-9DT"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQd-hY-D9d">
-                            <rect key="frame" x="186" y="22" width="42" height="21"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tác giả" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQd-hY-D9d">
+                            <rect key="frame" x="176.5" y="22" width="61.5" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="3QV-z4-mrO"/>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="zOZ-Cz-Rfs"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -71,7 +71,7 @@
                         <outlet property="delegate" destination="-1" id="Cj1-8x-Cdr"/>
                     </connections>
                 </collectionView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="drop_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="x9y-EI-cWG">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_menu_down" translatesAutoresizingMaskIntoConstraints="NO" id="x9y-EI-cWG">
                     <rect key="frame" x="361" y="116" width="43" height="43"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="43" id="Nl4-eW-RY5"/>
@@ -83,7 +83,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="Ljy-eT-tVw"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                     <state key="normal" title="TẤT CẢ">
                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
@@ -130,7 +130,7 @@
         </view>
     </objects>
     <resources>
-        <image name="drop_arrow" width="33" height="33"/>
+        <image name="ic_menu_down" width="33" height="33"/>
         <image name="icon_back" width="33" height="33"/>
     </resources>
 </document>
