--- a/Detail_/Book_Detail_Header.xib
+++ b/Detail_/Book_Detail_Header.xib
@@ -59,6 +59,23 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" clipsSubviews="YES" tag="33" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OU4-Pg-SJK">
+                    <rect key="frame" x="244" y="92.5" width="60" height="35"/>
+                    <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="60" id="FZZ-QF-rbT"/>
+                        <constraint firstAttribute="height" constant="35" id="mxM-rU-HSV"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                    <state key="normal" title="Đọc">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </button>
             </subviews>
             <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -70,6 +87,8 @@
                 <constraint firstItem="CTW-p0-eqB" firstAttribute="leading" secondItem="ZtM-7w-pO6" secondAttribute="leading" constant="8" id="WJh-1h-MtW"/>
                 <constraint firstItem="LG0-Jy-G7K" firstAttribute="leading" secondItem="ZtM-7w-pO6" secondAttribute="leading" constant="16" id="XaQ-6K-uTe"/>
                 <constraint firstItem="02r-ew-Xl7" firstAttribute="leading" secondItem="LG0-Jy-G7K" secondAttribute="trailing" constant="8" id="ZTS-o6-OwV"/>
+                <constraint firstItem="OU4-Pg-SJK" firstAttribute="centerY" secondItem="uqS-UH-Icy" secondAttribute="centerY" id="ZZ5-xL-O0A"/>
+                <constraint firstItem="ZtM-7w-pO6" firstAttribute="trailing" secondItem="OU4-Pg-SJK" secondAttribute="trailing" constant="16" id="dYI-qx-f1J"/>
                 <constraint firstAttribute="trailing" secondItem="02r-ew-Xl7" secondAttribute="trailing" constant="16" id="eUs-vh-DzH"/>
                 <constraint firstItem="NcQ-7R-aVo" firstAttribute="centerY" secondItem="uqS-UH-Icy" secondAttribute="centerY" id="fGc-TU-Ts5"/>
                 <constraint firstItem="02r-ew-Xl7" firstAttribute="top" secondItem="uqS-UH-Icy" secondAttribute="top" constant="20" id="g0v-ZT-IxZ"/>
@@ -116,7 +135,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H9F-NE-1xC">
-                    <rect key="frame" x="224" y="20" width="208" height="25"/>
+                    <rect key="frame" x="224" y="30" width="208" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="mjx-PG-l5J"/>
                     </constraints>
@@ -125,7 +144,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcH-yZ-98X">
-                    <rect key="frame" x="224" y="46" width="208" height="25"/>
+                    <rect key="frame" x="224" y="56" width="208" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="lZv-SB-XYP"/>
                     </constraints>
@@ -133,11 +152,30 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" clipsSubviews="YES" tag="33" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jlw-r0-VoM">
+                    <rect key="frame" x="358" y="150" width="70" height="40"/>
+                    <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="Jfo-ll-D3F"/>
+                        <constraint firstAttribute="width" constant="70" id="nYX-HH-yiK"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                    <state key="normal" title="Đọc">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="8"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </button>
             </subviews>
             <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="3RU-iS-5ZR" firstAttribute="leading" secondItem="8Ng-T4-wdK" secondAttribute="leading" constant="8" id="47c-Dj-8bo"/>
+                <constraint firstItem="8Ng-T4-wdK" firstAttribute="trailing" secondItem="jlw-r0-VoM" secondAttribute="trailing" constant="20" id="8ma-GS-rim"/>
                 <constraint firstItem="2CR-YJ-1YN" firstAttribute="leading" secondItem="3RU-iS-5ZR" secondAttribute="trailing" constant="6" id="Cue-UI-HY0"/>
+                <constraint firstItem="jlw-r0-VoM" firstAttribute="centerY" secondItem="dbe-7j-3Tw" secondAttribute="centerY" id="Cwh-xq-aVL"/>
                 <constraint firstItem="2CR-YJ-1YN" firstAttribute="centerY" secondItem="dbe-7j-3Tw" secondAttribute="centerY" id="F1f-dm-QRs"/>
                 <constraint firstItem="IKH-nr-bMO" firstAttribute="trailing" secondItem="8Ng-T4-wdK" secondAttribute="trailing" id="FIh-N9-VL6"/>
                 <constraint firstItem="IKH-nr-bMO" firstAttribute="bottom" secondItem="8Ng-T4-wdK" secondAttribute="bottom" id="JKb-Hu-heg"/>
@@ -148,7 +186,7 @@
                 <constraint firstItem="IKH-nr-bMO" firstAttribute="leading" secondItem="8Ng-T4-wdK" secondAttribute="leading" id="TlP-Sd-ThV"/>
                 <constraint firstItem="Hyf-Rw-hC3" firstAttribute="leading" secondItem="8Ng-T4-wdK" secondAttribute="leading" constant="16" id="WQw-8R-kaI"/>
                 <constraint firstItem="Hyf-Rw-hC3" firstAttribute="centerY" secondItem="dbe-7j-3Tw" secondAttribute="centerY" id="XQx-ut-5wA"/>
-                <constraint firstItem="H9F-NE-1xC" firstAttribute="top" secondItem="dbe-7j-3Tw" secondAttribute="top" constant="20" id="YkF-7t-AO8"/>
+                <constraint firstItem="H9F-NE-1xC" firstAttribute="top" secondItem="dbe-7j-3Tw" secondAttribute="top" constant="30" id="YkF-7t-AO8"/>
                 <constraint firstItem="H9F-NE-1xC" firstAttribute="leading" secondItem="Hyf-Rw-hC3" secondAttribute="trailing" constant="8" id="hN2-It-uYf"/>
                 <constraint firstItem="fcH-yZ-98X" firstAttribute="leading" secondItem="Hyf-Rw-hC3" secondAttribute="trailing" constant="8" id="mrs-jk-cNt"/>
                 <constraint firstItem="8Ng-T4-wdK" firstAttribute="trailing" secondItem="2CR-YJ-1YN" secondAttribute="trailing" constant="12" id="rD0-qv-zEe"/>
