--- a/Leff_Menu_/PC_Header_Tab.xib
+++ b/Leff_Menu_/PC_Header_Tab.xib
@@ -15,37 +15,36 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cxI-d5-sLp">
-                    <rect key="frame" x="285" y="12" width="25" height="25"/>
+                    <rect key="frame" x="277" y="8.5" width="33" height="33"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="25" id="7qd-gE-68A"/>
-                        <constraint firstAttribute="height" constant="25" id="Yns-MY-nai"/>
+                        <constraint firstAttribute="height" constant="33" id="1ti-wf-Ywd"/>
+                        <constraint firstAttribute="width" constant="33" id="BqI-Yy-C7e"/>
                     </constraints>
-                    <state key="normal" image="drop_arrow"/>
+                    <state key="normal" image="ic_menu_down"/>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="10" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZxX-rS-1Uu">
-                    <rect key="frame" x="8" y="8" width="35" height="35"/>
+                    <rect key="frame" x="8" y="7.5" width="0.0" height="35"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="35" id="0NP-SZ-FUl"/>
-                        <constraint firstAttribute="height" constant="35" id="6QB-yl-E7c"/>
+                        <constraint firstAttribute="height" constant="35" id="3cp-Wt-f0y"/>
+                        <constraint firstAttribute="width" id="bCF-cn-upL"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNX-tE-2BY">
-                    <rect key="frame" x="51" y="0.0" width="226" height="50"/>
+                    <rect key="frame" x="8" y="0.0" width="269" height="50"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="tNX-tE-2BY" firstAttribute="bottom" secondItem="nNQ-qI-h1w" secondAttribute="bottom" id="5Lf-Br-R8E"/>
-                <constraint firstItem="ZxX-rS-1Uu" firstAttribute="leading" secondItem="WLg-az-iL0" secondAttribute="leading" constant="8" id="5o3-fc-1w9"/>
-                <constraint firstItem="cxI-d5-sLp" firstAttribute="top" secondItem="WLg-az-iL0" secondAttribute="top" constant="12" id="K6S-la-ymB"/>
-                <constraint firstAttribute="trailing" secondItem="cxI-d5-sLp" secondAttribute="trailing" constant="10" id="Kqk-Fw-Rvk"/>
-                <constraint firstItem="ZxX-rS-1Uu" firstAttribute="top" secondItem="WLg-az-iL0" secondAttribute="top" constant="8" id="ZJH-xQ-RlK"/>
-                <constraint firstItem="cxI-d5-sLp" firstAttribute="leading" secondItem="tNX-tE-2BY" secondAttribute="trailing" constant="8" id="crQ-gl-8d6"/>
-                <constraint firstItem="tNX-tE-2BY" firstAttribute="leading" secondItem="ZxX-rS-1Uu" secondAttribute="trailing" constant="8" id="uQM-Mf-zrF"/>
-                <constraint firstItem="tNX-tE-2BY" firstAttribute="top" secondItem="WLg-az-iL0" secondAttribute="top" id="wXz-0d-WlB"/>
+                <constraint firstAttribute="trailing" secondItem="cxI-d5-sLp" secondAttribute="trailing" constant="10" id="11v-Ka-i0L"/>
+                <constraint firstItem="cxI-d5-sLp" firstAttribute="centerY" secondItem="WLg-az-iL0" secondAttribute="centerY" id="5yG-Pn-d9D"/>
+                <constraint firstItem="cxI-d5-sLp" firstAttribute="leading" secondItem="tNX-tE-2BY" secondAttribute="trailing" id="Twr-IP-kkA"/>
+                <constraint firstItem="ZxX-rS-1Uu" firstAttribute="leading" secondItem="WLg-az-iL0" secondAttribute="leading" constant="8" id="UrW-ZI-XGg"/>
+                <constraint firstItem="ZxX-rS-1Uu" firstAttribute="centerY" secondItem="WLg-az-iL0" secondAttribute="centerY" id="dUd-Mp-1iQ"/>
+                <constraint firstItem="tNX-tE-2BY" firstAttribute="top" secondItem="WLg-az-iL0" secondAttribute="top" id="j42-da-Fom"/>
+                <constraint firstItem="tNX-tE-2BY" firstAttribute="leading" secondItem="ZxX-rS-1Uu" secondAttribute="trailing" id="mTd-Wg-9q5"/>
+                <constraint firstItem="tNX-tE-2BY" firstAttribute="bottom" secondItem="nNQ-qI-h1w" secondAttribute="bottom" id="otV-wT-A52"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="nNQ-qI-h1w"/>
@@ -53,6 +52,6 @@
         </view>
     </objects>
     <resources>
-        <image name="drop_arrow" width="33" height="33"/>
+        <image name="ic_menu_down" width="33" height="33"/>
     </resources>
 </document>
