--- a/Leff_Menu_/TG_Intro_ViewController.xib
+++ b/Leff_Menu_/TG_Intro_ViewController.xib
@@ -10,7 +10,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TG_Intro_ViewController" customModule="HearThis" customModuleProvider="target">
             <connections>
+                <outlet property="avatar" destination="hqr-8h-tDc" id="kul-ok-BrH"/>
+                <outlet property="phoneNo" destination="Nio-bG-Y4A" id="yHf-Kh-6Hv"/>
                 <outlet property="tableView" destination="BdG-F7-GTQ" id="9Tn-Wc-sbN"/>
+                <outlet property="userName" destination="e5B-Ou-Lo5" id="58D-Vz-u9g"/>
                 <outlet property="view" destination="52Q-bo-5Na" id="rCF-fV-Qx5"/>
                 <outlet property="widthConstant" destination="GKl-oQ-Vps" id="UsM-S9-6Gj"/>
             </connections>
@@ -42,14 +45,14 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nio-bG-Y4A">
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nio-bG-Y4A">
                                     <rect key="frame" x="114" y="83" width="51" height="21"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="51" id="7Qm-yk-6dv"/>
                                         <constraint firstAttribute="height" constant="21" id="xux-IO-peS"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                     <userDefinedRuntimeAttributes>
@@ -71,9 +74,8 @@
                                 <constraint firstAttribute="height" constant="150" id="y4e-4E-cPX"/>
                             </constraints>
                         </view>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="BdG-F7-GTQ">
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BdG-F7-GTQ">
                             <rect key="frame" x="0.0" y="150" width="320" height="418"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <connections>
                                 <outlet property="dataSource" destination="-1" id="fDZ-8S-IHT"/>
                                 <outlet property="delegate" destination="-1" id="c4n-tH-P08"/>
