--- a/Tabbar_/Book_List_Cell.xib
+++ b/Tabbar_/Book_List_Cell.xib
@@ -79,8 +79,16 @@
                         <color key="textColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tpz-KF-QTG">
+                        <rect key="frame" x="7" y="164.5" width="313" height="0.5"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="DRs-5E-Hgh"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Tpz-KF-QTG" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="7" id="3xR-OB-KUl"/>
                     <constraint firstItem="eMt-HR-aKu" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="7" id="8Nm-uz-Vv6"/>
                     <constraint firstItem="fdH-1U-Xij" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="8c3-dw-4su"/>
                     <constraint firstItem="K0W-HG-Mtd" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="8" id="CUO-X3-bko"/>
@@ -91,6 +99,8 @@
                     <constraint firstItem="WAf-UP-r62" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="7" id="bPV-mJ-iEE"/>
                     <constraint firstAttribute="trailing" secondItem="Tjq-ps-R5d" secondAttribute="trailing" constant="11" id="c2l-oH-78k"/>
                     <constraint firstAttribute="trailing" secondItem="K0W-HG-Mtd" secondAttribute="trailing" constant="11" id="ccm-ar-3XD"/>
+                    <constraint firstAttribute="bottom" secondItem="Tpz-KF-QTG" secondAttribute="bottom" id="g40-q8-3o8"/>
+                    <constraint firstAttribute="trailing" secondItem="Tpz-KF-QTG" secondAttribute="trailing" id="gYr-T4-dID"/>
                     <constraint firstItem="Pbg-mN-naX" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="8" id="k6D-TT-qfP"/>
                     <constraint firstItem="K0W-HG-Mtd" firstAttribute="top" secondItem="fdH-1U-Xij" secondAttribute="bottom" constant="4" id="lAG-mM-9YP"/>
                     <constraint firstAttribute="trailing" secondItem="bNw-x4-lag" secondAttribute="trailing" constant="11" id="mWh-5O-wI9"/>
