--- a/Tabbar_/Second_Tab_ViewController.xib
+++ b/Tabbar_/Second_Tab_ViewController.xib
@@ -28,29 +28,45 @@
                                 <constraint firstAttribute="width" constant="44" id="Yda-Hv-0DO"/>
                                 <constraint firstAttribute="height" constant="44" id="u31-FK-am9"/>
                             </constraints>
-                            <state key="normal" image="icon_pass"/>
+                            <state key="normal" image="ic_menu"/>
+                            <connections>
+                                <action selector="didPressMenu:" destination="-1" eventType="touchUpInside" id="T2L-hR-wUb"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hiệu sách" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vmB-9m-Vta">
-                            <rect key="frame" x="118" y="22" width="84.5" height="21"/>
+                            <rect key="frame" x="117" y="22" width="86.5" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="Dlk-pS-RSO"/>
                                 <constraint firstAttribute="height" constant="21" id="XA6-R2-GLh"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UcN-iD-eMZ">
+                            <rect key="frame" x="268" y="10" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="44" id="MSa-Ph-TQP"/>
+                                <constraint firstAttribute="height" constant="44" id="gHU-ua-4aB"/>
+                            </constraints>
+                            <state key="normal" image="ic_search"/>
+                            <connections>
+                                <action selector="didPressSearch:" destination="-1" eventType="touchUpInside" id="WW8-Ma-31g"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.60784313729999995" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="vmB-9m-Vta" firstAttribute="top" secondItem="Gur-fu-bRv" secondAttribute="top" constant="22" id="1h1-C9-gQV"/>
+                        <constraint firstAttribute="trailing" secondItem="UcN-iD-eMZ" secondAttribute="trailing" constant="8" id="Exl-vR-SP8"/>
                         <constraint firstAttribute="height" constant="64" id="SOo-ih-HTs"/>
                         <constraint firstItem="vmB-9m-Vta" firstAttribute="centerX" secondItem="Gur-fu-bRv" secondAttribute="centerX" id="TZF-z7-RM9"/>
                         <constraint firstItem="JX1-Fa-cbG" firstAttribute="leading" secondItem="Gur-fu-bRv" secondAttribute="leading" constant="8" id="pAq-rj-LWe"/>
+                        <constraint firstItem="UcN-iD-eMZ" firstAttribute="top" secondItem="Gur-fu-bRv" secondAttribute="top" constant="10" id="prR-MW-Zic"/>
                         <constraint firstItem="JX1-Fa-cbG" firstAttribute="top" secondItem="Gur-fu-bRv" secondAttribute="top" constant="10" id="xbB-d8-Dgj"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qza-1l-HTV">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qza-1l-HTV">
                     <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <connections>
@@ -74,6 +90,7 @@
         </view>
     </objects>
     <resources>
-        <image name="icon_pass" width="13" height="13"/>
+        <image name="ic_menu" width="33" height="33"/>
+        <image name="ic_search" width="50.5" height="50.5"/>
     </resources>
 </document>
